--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>About | Your Name</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About | Daniel Gonzalez</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -12,7 +13,7 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
+      <a href="index.html" id="logo">Daniel Gonzalez</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -25,11 +26,9 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+      <img src="assets/images/profileimage.jpg" class="auth-image" alt="Daniel Gonzalez">
 
-      <p>Marshmallow jelly souffl&eacute; pastry biscuit gummi bears tootsie roll tootsie roll gingerbread. Cotton candy muffin gingerbread fruitcake. Sweet roll souffl&eacute; topping wafer croissant oat cake gummi&nbsp;bears.</p>
-
-      <p>Jelly-o cheesecake dessert fruitcake ice cream brownie liquorice souffl&eacute;. Caramels biscuit gummi bears tiramisu chupa chups. Croissant macaroon cotton candy cake pudding.</p>
+      <p>I'm from Hialeah, Florida and I'm a second generation Cuban American. My fraternal twin brother and I moved to Altamonte Springs to attend the UCF Coding Bootcamp. We're rooming with a friend of ours, a software engineer, so hopefully we'll have plenty of help outside of class.</p>
 
     </section>
 
@@ -37,16 +36,16 @@
       <div id="connect">
         <h2>Connect with Me</h2>
 
-        <a href="#"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="#"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+        <a href="#"><img src="assets/images/githubicon.png" class="social" alt="GitHub" /></a>
+        <a href="#"><img src="assets/images/linkedinicon.png" class="social" alt="LinkedIn" /></a>
+        <a href="#"><img src="assets/images/stackoverflowicon.png" class="social" alt="Stack Overflow" /></a>
       </div>
     </section>
   </div>
 
   <footer>
     <div class="container">
-      Copyright &copy; 2016 Your Name
+      Copyright &copy; 2017 Daniel Gonzalez
     </div>
   </footer>
 </body>
