--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio | Your Name</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio | Daniel Gonzalez</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -12,7 +13,7 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
+      <a href="index.html" id="logo">Daniel Gonzalez</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -26,27 +27,27 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
+        <img src="assets/images/hangman.png" alt="hangman">
 
         <h3>Hangman</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+        <img src="assets/images/rpg.jpg" alt="RPG Game">
 
         <h3>RPG Game</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+        <img src="assets/images/trivia.jpg" alt="Trivia Game">
 
         <h3>Trivia Game</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+        <img src="assets/images/rutgers.png" alt="Rutgers Info Widget">
 
         <h3>Rutgers Info Widget</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+        <img src="assets/images/rockpaperscissors.jpg" alt="Rock Paper Scissors">
 
         <h3>Rock Paper Scissors</h3>
       </div>
@@ -57,16 +58,16 @@
       <div id="connect">
         <h2>Connect with Me</h2>
 
-        <a href="#"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="#"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+        <a href="#"><img src="assets/images/githubicon.png" class="social" alt="GitHub" /></a>
+        <a href="#"><img src="assets/images/linkedinicon.png" class="social" alt="LinkedIn" /></a>
+        <a href="#"><img src="assets/images/stackoverflowicon.png" class="social" alt="Stack Overflow" /></a>
       </div>
     </section>
   </div>
 
   <footer>
     <div class="container">
-      Copyright &copy; 2016 Your Name
+      Copyright &copy; 2017 Daniel Gonzalez
     </div>
   </footer>
 </body>
